# fggs

./: .gitignore  LICENSE.md  Makefile  README.md  conjunction.py  derivations.py  domain.py  domains.py  factorize.py  factors.py  fgg.py  fgg_representation.py  fggs.py  formats.py  hmm.py  infer.py  pyproject.toml  requirements.txt  setup.cfg  sum_product.py  test_domains.py  test_factors.py  test_fgg_representation.py  test_formats.py  viz.py
.github/workflows/: ci.yaml
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  (+1 more)
fggs/: __init__.py  adjoint.py  conjunction.py  derivations.py  diagonal.py  domains.py  equation.py  factorize.py  factors.py  fggs.py  formats.py  indices.py  multi.py  old_sum_product.py  semirings.py  sum_product.py  typing.py  utils.py  viterbi.py
test/: AhrensSzekeresGeneralizedQuadrangleGraph_3.gr  advanced_cycle.json  barhillel.json  barhillel_interp.json  big.json  conjunct.json  conjunction.json  cycle.json  disconnected_node.json  disconnected_node_interp.json  example12p.json  example12p_interp.json  hmm.json  hmm_interp.json  linear.json  linear_interp.json  simplefgg.json  simplefgg_interp.json  test.json  test_adjoint.py  test_conjunction.py  test_derivations.py  test_domains.py  test_equation.py  test_factorize.py  test_factors.py  test_fgg_representation.py  test_fgg_utils.py  test_fggs.py  test_formats.py  test_indices.py  test_multi.py  test_readme.py  test_semirings.py  test_sum_product.py  test_sum_product.sh  test_utils.py  test_viterbi.py
(+34 files in other folders)
