[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fggs"
version = "0.1"
authors = [
  { name="David Chiang", email="dchiang@nd.edu" },
  { name="Darcey Riley", email="darcey.riley@nd.edu" },
  { name="Ken Sible", email="ksible@nd.edu" },
]
description = "Factor Graph Grammars in Python"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.8",
    "torch-semiring-einsum>=1.1",
    "pydot",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/diprism/fggs"

[tool.setuptools]
packages = ["fggs"]
