[metadata]
name = fggs
version = 0.0.1
description = Factor Graph Grammars in Python
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = fggs
install_requires =
    torch>=1.8
    torch-semiring-einsum
    pydot
    tqdm

[options.package_data]
fggs = py.typed